--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,14 @@ language: python
 python:
   - "2.7"
   - "3.5"
-  - "3.5-dev" # 3.5 development branch
   - "3.6"
-  - "3.6-dev" # 3.6 development branch
   - "3.7-dev" # 3.7 development branch
-# command to install dependencies
+
+env:
+  - DJANGO_VERSION=1.11.5
+
 install:
+  - pip install -q Django==$DJANGO_VERSION
   - pip install -r test-requirements.txt
   - python setup.py install
 
