--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
-  - "3.7-dev" # 3.7 development branch
 
 env:
   - DJANGO_VERSION=1.11.5
 
 install:
+  - if [[ $TRAVIS_PYTHON_VERSION == 2.6 ]]; then pip install importlib unittest2; fi
   - pip install -q Django==$DJANGO_VERSION
   - pip install -r test-requirements.txt
   - python setup.py install
